--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^0.8.0",
     "clsx": "^1.2.1",
+    "ethers": "^5.7.2",
     "next": "^13.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "tailwind-merge": "^1.8.0"
+    "tailwind-merge": "^1.8.0",
+    "wagmi": "^0.8.10"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
@@ -54,7 +57,6 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
-      "eslint --max-warnings=0",
       "prettier -w"
     ],
     "**/*.{json,css,scss,md,webmanifest}": [
